--- a/flink-learning-connectors/flink-learning-connectors-es6/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-es6/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-kafka.brokers=localhost:9092
+kafka.brokers=cdh00:9092
 kafka.group.id=metrics-group-test
-kafka.zookeeper.connect=localhost:2181
+kafka.zookeeper.connect=cdh00:2181
 metrics.topic=alert-metrics
 stream.parallelism=5
 stream.checkpoint.interval=1000
@@ -9,7 +9,7 @@ elasticsearch.hosts=localhost:9200,localhost:9202,localhost:9203
 elasticsearch.bulk.flush.max.actions=40
 stream.sink.parallelism=5
 
-# 权限
+# \u6743\u9650
 es.security.enable=false
 es.security.username=zhisheng
 es.security.password=zhisheng
