--- a/flink-learning-connectors/flink-learning-connectors-hbase/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-hbase/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-kafka.brokers=localhost:9092
+kafka.brokers=cdh00:9092
 kafka.group.id=zhisheng
-kafka.zookeeper.connect=localhost:2181
+kafka.zookeeper.connect=cdh00:2181
 metrics.topic=zhisheng
 stream.parallelism=4
 stream.sink.parallelism=4
@@ -9,7 +9,7 @@ stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
 
 # HBase
-hbase.zookeeper.quorum=localhost:2181
+hbase.zookeeper.quorum=cdh00:2181
 hbase.client.retries.number=1
 hbase.master.info.port=-1
 hbase.zookeeper.property.clientPort=2081
