--- a/flink-learning-connectors/flink-learning-connectors-hdfs/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-hdfs/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-kafka.brokers=localhost:9092
+kafka.brokers=cdh00:9092
 kafka.group.id=zhisheng
-kafka.zookeeper.connect=localhost:2181
+kafka.zookeeper.connect=cdh00:2181
 metrics.topic=zhisheng
 stream.parallelism=4
 stream.sink.parallelism=4
