--- a/flink-learning-connectors/flink-learning-connectors-kafka/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-kafka/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-kafka.brokers=localhost:9092
+kafka.brokers=cdh00:9092
 kafka.group.id=metrics-group-test
 kafka.zookeeper.connect=xxx:2181
 metrics.topic=zhisheng
 logs.topic=xxx
-kafka.sink.brokers=localhost:9092
+kafka.sink.brokers=cdh00:9092
 kafka.sink.topic=metric-test
 stream.parallelism=5
 stream.checkpoint.interval=1000
