--- a/flink-learning-monitor/flink-learning-monitor-alert/src/main/resources/application.properties
+++ b/flink-learning-monitor/flink-learning-monitor-alert/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-kafka.brokers=localhost:9092
+kafka.brokers=cdh00:9092
 kafka.group.id=zhisheng
-kafka.zookeeper.connect=localhost:2181
+kafka.zookeeper.connect=cdh00:2181
 metrics.topic=zhisheng_metrics
 log.topic=zhisheng_log
 stream.parallelism=4
