--- a/flink-learning-monitor/flink-learning-monitor-log/src/main/resources/application.properties
+++ b/flink-learning-monitor/flink-learning-monitor-log/src/main/resources/application.properties
@@ -3,7 +3,7 @@ kafka.group.id=zhisheng-log-group
 kafka.zookeeper.connect=xxx:2181
 metrics.topic=zhisheng
 logs.topic=zhisheng_log
-kafka.sink.brokers=localhost:9092
+kafka.sink.brokers=cdh00:9092
 kafka.sink.topic=metric-test
 stream.parallelism=5
 stream.checkpoint.interval=1000
