--- a/flink-learning-connectors/flink-learning-connectors-kafka/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-kafka/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 kafka.brokers=cdh00:9092
 kafka.group.id=metrics-group-test
-kafka.zookeeper.connect=xxx:2181
-metrics.topic=zhisheng
+kafka.zookeeper.connect=cdh00:2181
+metrics.topic=kevin1
 logs.topic=xxx
 kafka.sink.brokers=cdh00:9092
-kafka.sink.topic=metric-test
+kafka.sink.topic=kevin
 stream.parallelism=5
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
