--- a/flink-learning-data-sources/src/main/resources/application.properties
+++ b/flink-learning-data-sources/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 kafka.brokers=cdh00:9092
 kafka.group.id=metrics-group
 kafka.zookeeper.connect=cdh00:2181
-metrics.topic=alert-metrics
+metrics.topic=kevin
 stream.parallelism=5
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
