--- a/flink-learning-connectors/flink-learning-connectors-redis/pom.xml
+++ b/flink-learning-connectors/flink-learning-connectors-redis/pom.xml
@@ -46,7 +46,7 @@
 
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zhisheng.connectors.redis.Main</mainClass>
+                                    <mainClass>com.zhisheng.connectors.redis.KafkaToFlinkToRedis</mainClass>
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
