--- a/flink-learning-connectors/flink-learning-connectors-redis/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-redis/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 kafka.brokers=cdh00:9092
-kafka.group.id=zhisheng
+kafka.group.id=metrics-group-test
 kafka.zookeeper.connect=cdh00:2181
-metrics.topic=zhisheng
-stream.parallelism=4
-stream.sink.parallelism=4
-stream.default.parallelism=4
+metrics.topic=kevin1
+logs.topic=xxx
+kafka.sink.brokers=cdh00:9092
+kafka.sink.topic=kevin
+stream.parallelism=5
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
+stream.sink.parallelism=5
 redis.host=127.0.0.1
