--- a/flink-learning-connectors/flink-learning-connectors-redis/src/main/resources/application.properties
+++ b/flink-learning-connectors/flink-learning-connectors-redis/src/main/resources/application.properties
@@ -9,4 +9,5 @@ stream.parallelism=5
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
 stream.sink.parallelism=5
-redis.host=127.0.0.1
+#redis.host=127.0.0.1
+redis.host=192.168.1.2
